@@ -10,11 +10,9 @@
   functions. Deprecated classes, functions and methods have been
   specifically left out of this reference though classes that have become
   deprecated since PyGTK 2.0 have been left in but annotated with a
-  deprecation warning. I have attempted to document as much of the
-  <literal>PyGTK</literal> <literal>API</literal> as I can but there are
-  undoubtedly errors and omissions. If you discover any of these please send
-  me email at <email><ulink
-  url="mailto:finlay@moeraki.com">finlay@moeraki.com</ulink></email> or file
+  deprecation warning. This document attempts to document as much of the
+  <literal>PyGTK</literal> <literal>API</literal> as possible but there are
+  undoubtedly errors and omissions. If you discover any of these please file
   a bug report at <ulink
   url="http://bugzilla.gnome.org">bugzilla.gnome.org</ulink> for the
   <literal>pygtk</literal> project. Specific areas that have not been
@@ -511,21 +509,6 @@ important). The following calls have the same result:</para>
     <para>Parameters that are not keyword parameters are displayed in
     <emphasis>italic</emphasis> and must be specified positionally but may
     also be optional.</para>
-
-  </sect1>
-
-  <sect1 id="pygtk-reference-copyright">
-    <title>Copyright and License Notice</title>
-
-    <para>The PyGTK 2.0 Reference is Copyright (C) 2004-2006 John
-    Finlay.</para>
-
-    <para>This work is licensed under the Creative Commons
-    Attribution-ShareAlike License. To view a copy of this license, visit
-    <ulink
-    url="http://creativecommons.org/licenses/by-sa/1.0/">http://creativecommons.org/licenses/by-sa/1.0/</ulink>
-    or send a letter to Creative Commons, 559 Nathan Abbott Way, Stanford,
-    California 94305, USA.</para>
 
   </sect1>
 
