@@ -12,12 +12,6 @@
     <title>PyGTK 2.0 Reference Manual</title>
     <edition>PyGTK Reference Manual for PyGTK &version;</edition>
     <releaseinfo>For PyGTK version &version;</releaseinfo>
-    <authorgroup>
-      <author>
-	<firstname>John</firstname>
-	<surname>Finlay</surname>
-      </author>
-    </authorgroup>
     <abstract>
       <para>This reference describes the classes of the Python PyGTK
 module.</para>
