@@ -1,3 +1,9 @@
+2006-10-11  John Finlay  <finlay@moeraki.com>
+
+	* pygtk2-ref.xml: Remove Author info.
+
+	* pygtk-introduction.xml: Remove Copyright and License section.
+
 2006-08-22  Johan Dahlin  <jdahlin@async.com.br>
 
 	* pygtk-gtkcontainer.xml (linkend): forall, spotted by 
